<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="12dp"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/adminBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            app:srcCompat="@drawable/ic_arrow_back_24dp_000000_fill0_wght400_grad0_opsz24" />

        <TextView
            android:id="@+id/textUsers"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:text="Search for users"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="12dp"
        android:gravity="center_vertical">


        <EditText
            android:id="@+id/searchUsers"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="#E7E4E4"
            android:hint="Search users"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:paddingStart="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginVertical="12dp">

        <Button
            android:id="@+id/sortButtonUsersEntrants"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            android:text="Entrants"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sortButtonUsersOrganizers"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            android:text="Organizers"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sortButtonUsersAdmins"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            android:text="Admins"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>


    <ListView
        android:id="@+id/userListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
