<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!-- App Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Event Lottery"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="30dp" />

<!--    entrant button-->
    <LinearLayout
        android:id="@+id/btn_entrant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Entrant Panel"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btn_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Notification"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

<!--    admin button-->
    <LinearLayout
        android:id="@+id/btn_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Admin Panel"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/black"
            android:textStyle="bold" />


    </LinearLayout>

<!--    organizer button-->
    <LinearLayout
        android:id="@+id/btn_organizer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="20dp"
        android:background="@drawable/border_radius"
        android:backgroundTint="@color/gray_light">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Organizer Panel"
            android:textSize="@dimen/text_size_title"
            android:textColor="@color/black"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>