<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/admin_home_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/AdminPortal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Portal"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black" />

    <ListView
        android:id="@+id/admin_browse"
        android:layout_width="match_parent"
        android:layout_height="614dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1" />
</LinearLayout>
